--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
         <h3>My First Website</h3>
         <p>Nowadays it is almost impossible to imagine the world without the internet and websites.And in recent years the demand for professional web programmers has been increasing, so you can find all kinds of experts on the subject for your company.Do you want to use technology as a resource for your company? You can have your own website and incorporate it into your next marketing campaigns.That is why today we are going to talk about what web programming is. We will also tell you how to make the most of it for your company in terms of marketing campaigns.</p>
     </div>
+    <div>
+        <h3>My Second Blog</h3>
+        <p>Nowadays it is almost impossible to imagine the world without the internet and websites.And in recent years the demand for professional web programmers has been increasing, so you can find all kinds of experts on the subject for your company.Do you want to use technology as a resource for your company? You can have your own website and incorporate it into your next marketing campaigns.That is why today we are going to talk about what web programming is. We will also tell you how to make the most of it for your company in terms of marketing campaigns.</p>
+    </div>
+    <div>
+        <h3>My Third Blog</h3>
+        <p>Nowadays it is almost impossible to imagine the world without the internet and websites.And in recent years the demand for professional web programmers has been increasing, so you can find all kinds of experts on the subject for your company.Do you want to use technology as a resource for your company? You can have your own website and incorporate it into your next marketing campaigns.That is why today we are going to talk about what web programming is. We will also tell you how to make the most of it for your company in terms of marketing campaigns.</p>
+    </div>
 </body>
 </html>
